# interview-agent

./: .actrc  .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  WIKI.md  deploy.sh  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md  task.md
.github/workflows/: ci-api.yml  ci.yml  (+1 more)
apps/py/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/py/alembic/: env.py
apps/py/alembic/versions/: 2026_06_27_001_init.py  2026_06_28_002_users_id_check.py  2026_06_28_003_add_resumes_table.py
apps/py/src/interview_agent/: __init__.py  config.py  deps.py  main.py
apps/py/src/interview_agent/agents/: nodes.py  state.py
apps/py/src/interview_agent/api/: __init__.py  health.py
apps/py/src/interview_agent/common/: __init__.py  logging.py
apps/py/src/interview_agent/infra/: __init__.py  db.py  models.py  redis_client.py
apps/py/src/interview_agent/modules/: __init__.py
apps/py/src/interview_agent/modules/agent/services/: dynamic_task_queue.py
apps/py/src/interview_agent/modules/auth/: __init__.py  auth_controller.py  auth_service.py  jwt_guard.py  throttler.py
apps/py/src/interview_agent/modules/interview/: evaluation_controller.py  interview_controller.py  lifecycle_controller.py  question_bank_controller.py  rag_service.py  resume_controller.py  resume_parser.py
apps/py/src/interview_agent/modules/knowledge_base/: knowledge_banks.py  knowledge_base_controller.py
apps/py/src/interview_agent/modules/llm/: llm_gateway.py
apps/py/src/interview_agent/modules/llm/cache/: prompt_cache_strategy.py  semantic_cache_service.py
apps/py/src/interview_agent/modules/llm/cost/: session_cost_tracker.py
apps/py/src/interview_agent/modules/llm/providers/: base_provider.py  types.py
apps/py/src/interview_agent/modules/mcp/: mcp_controller.py  mcp_registry.py
apps/py/src/interview_agent/modules/memory/: memory.py
apps/py/src/interview_agent/modules/user/: __init__.py  user_controller.py
apps/py/tests/: README.md  test_all_phases.py  test_end_interview_llm.py
docs/: STATUS-REPORT-2026-06-20.md  architecture-decisions.md  architecture.html  architecture.md  resume-bullets.md  runbook.md
scripts/: bench-cache-50.ts  ci-local-test.sh  e2e-external-mcp.ts  e2e-test.sh  mock-mcp-server.ts  render-cost-baseline.mjs  wait-for-services.sh
(+286 files in other folders)
