[project]
name = "interview-agent-py"
version = "0.1.0"
description = "AI 面试智能体 — Python 后端（与 NestJS 像素级等价）"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",  # file upload
    "slowapi>=0.1.9",  # rate limiting (NestJS throttler 等价)
    # Validation / Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    # Auth
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",  # alembic sync 迁移需要
    # Cache / Store
    "redis>=5.0.0",
    "hiredis>=3.0.0",
    # LLM
    "openai>=1.50.0",  # Qwen / DeepSeek 都走 OpenAI 兼容协议
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "tiktoken>=0.7.0",
    # LangGraph / LangChain 1.x
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=3.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "deepagents>=0.2.0",
    # Vector DB
    "qdrant-client>=1.7.0",
    "pymilvus>=2.4.0",
    # Memory
    "mem0ai>=0.1.0",
    # MCP
    "mcp>=1.0.0",
    # RAG / Embedding
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    # PDF
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    # Observability
    "langfuse>=3.0.0",
    # Util
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # test client
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true